# uxvcos

./: .gitignore  .rosinstall  .rsync-filter  env.sh  uxvcos.rosinstall
airplane/src/: CMakeLists.txt
airplane/src/controller/: Airplane.cpp  Airplane.h  CMakeLists.txt
core/src/: CMakeLists.txt  version.cpp  version.h
core/src/base/: Application.cpp  Application.h  CMakeLists.txt  Child.h  Configuration.h  DataPool.cpp  DataPool.h  MappingFixed.h  Module.cpp  Module.h  ModuleContainer.h  PortListener.h  Transformation.h  Trigger.h  main.cpp  main.inl  target.h
core/src/connector/: BufferedSocketConnector.h  CMakeLists.txt  Connector.h  SocketConnector.cpp  SocketConnector.h
core/src/controller/: CMakeLists.txt  Controller.h  ControllerTask.h  Limit.cpp  Limit.h  PID.h  RC.h  helper.h
core/src/data/: CMakeLists.txt  Key.cpp  Key.h  Streamable.cpp  Streamable.h  StreamableCompositionFactory.h  StreamableFormatter.h  StreamableTypeInfo.h  Timestamp.cpp  Timestamp.h  TypeInfo.cpp  TypeInfo.h  TypeInfoGenerator.h  TypeRegistry.cpp  TypeRegistry.h  Typekit.h  UnknownTypeInfo.h  uxvcos-types.cpp  uxvcos-types.h
core/src/devices/: CMakeLists.txt
core/src/devices/xbee/: CMakeLists.txt  XBee.cpp
core/src/filter/: BaseFilter.h  Butterworth.h  PT1.h
core/src/interface/: BaseInterface.cpp  BaseInterface.h  CMakeLists.txt  RC.cpp  RC.h  SerialInterface.cpp  SerialInterface.h  StreamInterface.cpp  StreamInterface.h
core/src/logging/: CMakeLists.txt  Logging.cpp  Logging.h  Replay.cpp  Replay.h  component.cpp
core/src/options/: CMakeLists.txt  options.cpp  options.h
core/src/ros_integration/: ros_plugin.hpp  ros_publisher.hpp  ros_subscriber.hpp  ros_taskcontext.hpp
core/src/sensors/: Airspeed.h  Baro.h  CMakeLists.txt  IMU.cpp  IMU.h  Magnetic.h  Sensor.h  Supply.h  Temperature.h  Ultrasound.h
core/src/server/: CMakeLists.txt  Server.cpp  Server.h
core/src/simulation/: CMakeLists.txt  Simulink.cpp  Simulink.h
core/src/simulink/: CMakeLists.txt  SimulinkInterface.cpp  SimulinkInterface.h
core/src/stream/: BaseStream.h  Buffer.h  CMakeLists.txt  Chunk.h  Stream.cpp
core/src/stream/helper/: PropertyStream.cpp  PropertyStream.h  VectorStream.cpp  VectorStream.h
core/src/stream/ubx/: Protocol.cpp  Protocol.h  Stream.cpp  Stream.h
core/src/system/: BaseFileStream.h  BaseSerialPort.h  BaseSocket.h  CMakeLists.txt  Error.h  EthernetAddress.h  Exception.h  FileStream.h  NetworkAddress.h  Pipe.h  Priorities.cpp  Priorities.h  SerialPort.cpp  SystemCall.cpp  systemcalls.h
core/src/system/unix/: Error.cpp  Error.h  FileStream.cpp  Pipe.cpp  Pipe.h  SerialPort.cpp  SerialPort.h  Socket.cpp  Socket.h  SystemCall.h  backtrace.cpp  backtrace.h
core/src/system/win32/: Error.cpp  FileStream.h  SerialPort.cpp  SerialPort.h  Socket.cpp  Socket.h  SystemCall.h
core/src/system/xenomai/: Pipe.cpp  Xenomai.h
core/src/util/: info.cpp  play.cpp
core/src/uxvcos/: Time.h
core/src/watchdog/: CMakeLists.txt  watchdog.cpp  watchdog.h
core/uxvcos/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  uxvcos-config.cmake  uxvcos.pc.in
core/uxvcos/cmake/: CheckGCCVersion.cmake  ToolchainOptions.cmake  Upload.cmake
core/uxvcos/include/uxvcos/: Time.h  uxvcos.h  version.h.in
core/uxvcos/src/: CMakeLists.txt  version.cpp
core/uxvcos/src/data/: CMakeLists.txt  Key.cpp  Streamable.cpp  Timestamp.cpp  TypeInfo.cpp  TypeRegistry.cpp
core/uxvcos/src/options/: CMakeLists.txt  options.cpp
core/uxvcos/src/stream/: CMakeLists.txt  (+1 more)
core/uxvcos_rtt/: CMakeLists.txt  mainpage.dox  manifest.xml  uxvcos_rtt-config.cmake  uxvcos_rtt.pc.in
core/uxvcos_rtt/src/: Application.cpp  CMakeLists.txt  Configuration.cpp  DataPool.cpp  Mapping.cpp  Module.cpp  main.cpp
fmp/src/: CMakeLists.txt  fmp.cpp
fmp/src/interface/: CMakeLists.txt  FMPBox.cpp  FMPBox.h  VistaNav.cpp  VistaNav.h
fmp/src/replay/: CMakeLists.txt  replay.cpp
fmp/src/sensors/: CMakeLists.txt  FMP.cpp  FMP.h
fmp/src/types/: CMakeLists.txt  fmp.cpp  fmp.h
quadro/: CMakeLists.txt  mainpage.dox  manifest.xml
quadro/conf/: .rsync-filter  controller.cpf  interface.cpf  quadro.ops  quadro.osd  rc.cpf
quadro/conf/mapping/: interface.cpf
quadro/conf/testbed/: interface.cpf  testbed.cpf
quadro/conf/uav5/: interface.cpf
quadro/conf/uav6/: interface.cpf
quadro/conf/uav7/: interface.cpf
quadro/launch/: camera_node.launch  drivers.launch  ground_station.launch  mapping_box.launch  quadro.launch  record.launch  robot.launch  tf.launch
quadro/simulink/: Ports.mdl
quadro/simulink/HIL_DI/: Data_Logger.xlsx  QR_DI_Init.m  Reference_Calibration.m  cascade_control_hil.mdl  full_simulation_split_hil_new_connection.mdl  quadro_cascade_disturbance_wo_wind.m
quadro/simulink/MBN/: Kalmangain.m  init_QK_ROS.m  model_QK_SFSVD_ROS.mdl  reglerparameter_QK.m  statePrediction.m
quadro/simulink/Motordaten/: Motordaten_roxxy_2827-34_2010_10_26_10x45_003.mat
quadro/simulink/autonomy/: Ports.mdl  autonomous_takeoff_landing.mdl  init.m  parameter_QK.m  parameter_ZA.m  parameter_regler.m  qs.m  zulwin.m
quadro/simulink/tools/: 110826wind.txt  downsamplevector.m  format_command.m  formatdata_cascade.m  formatdata_didepch.m  generate_command.mdl  generate_filename.m  get_command.m  load_mat_files.m  load_winddata.m  plot_struct.m  plot_struct_hil_for_thesis.m  plot_struct_hil_for_thesis_multi.m  preprocess_hil.m  preprocess_sim.m  reducevector.m  save_hil_plots.m  save_simulation_plots.m
quadro/src/: CMakeLists.txt  quadro.cpp
quadro/src/autonomy/: Autonomy.cpp  Autonomy.h  CMakeLists.txt  Simulink.cpp  Simulink.h
quadro/src/controller/: Altimeter.cpp  Altimeter.h  Attitude.cpp  Attitude.h  CMakeLists.txt  Force.cpp  Force.h  Heading.cpp  Heading.h  Height.cpp  Height.h  Motor.cpp  Motor.h  Position.cpp  Position.h  Quadrotor.cpp  Quadrotor.h  Test.cpp  Test.h  Thrust.cpp  Thrust.h  Velocity.cpp  Velocity.h  wrench_operations.h
quadro/src/ros/: CMakeLists.txt  ROS.cpp  ROS.h
quadro/src/simulink/: CMakeLists.txt  Simulink.cpp  Simulink.h
quadro/src/testbed/: CMakeLists.txt  Testbed.cpp  Testbed.h
(+380 files in other folders)
